@@ -138,7 +138,7 @@ useful for statistics.
 
 @DOCSTRING(cloglog)
 
-@DOCSTRING(table)
+@DOCSTRING(crosstab)
 
 @node Statistical Plots
 @section Statistical Plots
